import React, { PureComponent } from 'react';
import PropTypes from 'prop-types';

import {
  BackButton,
  BackIcon,
  Container,
  Gradient,
  NavRow,
  Title,
} from './styles';

class CustomHeader extends PureComponent {
  static propTypes = {
    children: PropTypes.any,
    onBackButtonPress: PropTypes.func,
    title: PropTypes.string,
  };

  render() {
    const { children, onBackButtonPress, title } = this.props;

    return (
      <Gradient>
        <NavRow>
          <BackButton onPress={onBackButtonPress} testID="BACK_BUTTON">
            <BackIcon />
          </BackButton>
          <Title>{title}</Title>
        </NavRow>
        <Container>{children}</Container>
      </Gradient>
    );
  }
}

export default CustomHeader;
