...
  };

  render() {
    const { withDecimals } = this.props;

    return (
      <Grid style={styles.grid} testID="KEYBOARD">
        <Row style={styles.row}>
          {range(1, 4).map(i => (
            <Col key={i} style={styles.col}>
              {this.renderNumberButton(i)}
            </Col>
          ))}
...
